@@ -2,7 +2,8 @@
 
 * Support import of password-protected PDFs. Closes Debian bug #894764
   (Please prompt for password on import of encrypted file)
-* Update cursor depending on edge of selection
+* Update cursor depending on edge of selection, and allow selection to be
+  modified by dragging the edge or corner
 
 
 2.0.3 (30.03.2018):
